fix scrollbar and bar toggle with no picture

--- a/benjamin-portfolio/src/app/modules/resume-page/content/content.component.scss
+++ b/benjamin-portfolio/src/app/modules/resume-page/content/content.component.scss
@@ -6,6 +6,20 @@
     scrollbar-width: thin;
 }
 
+::-webkit-scrollbar {
+    opacity: 0.8;
+    background: #234926;
+    scrollbar-width: thin;
+    width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+    opacity: 0.8;
+    background: #52b258;
+    -webkit-border-radius: 2px;
+    -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75);
+}
+
 .skill-block-container {
     display: flex;
     margin-bottom: 24px;
