--- a/benjamin-portfolio/src/app/shared/layout/nav-bar/nav-bar.component.scss
+++ b/benjamin-portfolio/src/app/shared/layout/nav-bar/nav-bar.component.scss
@@ -39,6 +39,7 @@ app-icon:last-child {
     position: absolute;
     padding-left: 13px;
     cursor: pointer;
+    z-index: 2;
 }
 
 .menu-icon {
